# SentimentTrader

./: .gitignore  CMakeLists.txt  README.md  stRunDebug.sh  stSetup.sh
src/: main.cpp
src/Env/: EnvManager.cpp  EnvManager.h
src/Llama/: LlamaModel.cpp  LlamaModel.h
src/News/: NewsArticle.cpp  NewsArticle.h  NewsManager.cpp  NewsManager.h
src/Utils/: Utils.cpp  Utils.h
